--- a/package.json
+++ b/package.json
@@ -29,9 +29,12 @@
     "@types/node": "^20.4.5",
     "@typescript-eslint/eslint-plugin": "6.2.0",
     "@typescript-eslint/parser": "6.2.0",
+    "autoprefixer": "^10.4.14",
     "eslint": "8.45.0",
     "eslint-plugin-qwik": "^1.2.7",
+    "postcss": "8.4.27",
     "prettier": "3.0.0",
+    "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
     "undici": "5.22.1",
     "vite": "4.4.7",
@@ -41,6 +44,8 @@
     "@capacitor/android": "^5.2.3",
     "@capacitor/core": "^5.2.3",
     "@capacitor/ios": "^5.2.3",
+    "@ionic/react": "^7.3.0",
+    "@ionic/react-router": "^7.3.0",
     "cap": "^0.2.1"
   }
 }
